--- a/scss/layout/_services-section.scss
+++ b/scss/layout/_services-section.scss
@@ -296,7 +296,6 @@
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
-        width: 750px; // i need this to be 750px so it doesnt expand when the page gets biggerand aligns to the flex box below
     }
 
     // makes the services section flex and wrap to have the side by side bits possible
@@ -333,13 +332,6 @@
 
 }
 
-@media(min-width: 768px) and (max-width: 991px){
-
-        // this sets the services section to not grow more than this to match nettmatters layout
-        .services-section {
-            width: 750px;
-        }
-}
 
 @media (min-width: 992px) and (max-width: 1259px){
 
